# maxbot-demo-chatbot-python

./: .env  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
assets/: strings.yaml
scenes/: endpoints.py  main_menu.py  start.py
utils/: yml_reader.py
